<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coin_d4_driver</name>
  <version>1.0.0</version>
  <description>ros driver for coin d4 lidar</description>
  <maintainer email="jhj@robotis.com">Hyeongjun Jeon</maintainer>
  <license>Apache 2.0</license>
  <author email="jhj@robotis.com">Hyeongjun Jeon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
